# AR6-WG1-Data-Compilation

./: .gitattributes  .gitignore  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  compilation-config.yaml  environment.yml  setup.cfg  setup.py
data/: README.md
data/processed/fig-spm1/: fig-spm1-timeseries.csv
data/processed/fig-spm10/: fig-spm10-timeseries.csv
data/processed/fig-spm4/: fig-spm4-timeseries.csv
data/processed/fig-spm7/: fig-spm7-timeseries.csv
data/processed/fig-spm8/: fig-spm8-timeseries.csv
data/raw/dap.ceda.ac.uk/: README.md
notebooks/: README.md  ar6-wg1-spm1-scmdata.ipynb  ar6-wg1-spm1.ipynb  ar6-wg1-spm10-scmdata.ipynb  ar6-wg1-spm10.ipynb  ar6-wg1-spm4-pyam.ipynb  ar6-wg1-spm4-scmdata.ipynb  ar6-wg1-spm4.ipynb  ar6-wg1-spm7-pyam.ipynb  ar6-wg1-spm8-pyam.ipynb  ar6-wg1-spm8-scmdata-plus-obs.ipynb  ar6-wg1-spm8-scmdata.ipynb  ar6-wg1-spm8.ipynb  plotting.yaml  utils.py
src/openscm_ar6_wg1_data_compilation/: __init__.py  _version.py  badc.py  cli.py  spm_fig_1.py  spm_fig_10.py  spm_fig_4.py  spm_fig_7.py  spm_fig_8.py  utils.py
tests/: conftest.py
tests/integration/: test_badc.py
tests/regression/: test_file_generation.py
