[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = openscm_ar6_wg1_data_compilation
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
skip = versioneer.py, src/openscm_ar6_wg1_data_compilation/_version.py

[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = src/openscm_ar6_wg1_data_compilation/_version.py
versionfile_build = openscm_ar6_wg1_data_compilation/_version.py
tag_prefix = v
parentdir_prefix = openscm-ar6-wg1-data-compilation-
